--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@react-three/drei": "^9.83.9",
+    "@react-three/fiber": "^8.14.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.62.1",
+    "react-scroll": "^1.8.9",
+    "react-simple-maps": "^3.0.0",
+    "react-sweetalert2": "^0.6.0",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^5.3.10",
+    "three": "^0.156.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.4.9"
   }
 }
