--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
@@ -25,9 +20,7 @@
     "react-simple-maps": "^3.0.0",
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^9.1.3",
-    "styled-components": "^5.3.10",
-    "three": "^0.156.1",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
