--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-simple-maps": "^3.0.0",
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^9.1.3",
+    "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^5.3.10"
   },
   "scripts": {
